# design-patterns-cplusplus

./: CMakeLists.txt  LICENSE  README.md
adapter/: README.md
bridge/: CMakeLists.txt  README.md
bridge/bridge/: CMakeLists.txt  main.cpp
bridge/diagrams/: bridge-modified-uml.wsd  bridge-uml.wsd
bridge/pimpl_idiom/: Person.cpp  Person.hpp  README.md
bridge/shrink_wrapped_pimpl/: CMakeLists.txt  Foo.cpp  Foo.h  Makefile  main.cpp  pimpl.h
builder/: CMakeLists.txt
builder/creational_groovy_style_builder/: CMakeLists.txt  creational_groovy_style.cpp
builder/fluent_builder/: CMakeLists.txt  fluent_builder.cpp
command/: CMakeLists.txt  README.md  composite_command.cpp  main.cpp
factories/abstract_factories/: CMakeLists.txt  DrinkFactory.hpp  HotDrink.hpp  HotDrinkFactory.hpp  main.cpp
factories/example/: Makefile  example  example.cpp
factories/functional_factories/: DrinkFactory.hpp
interpreter/: CMakeLists.txt  README.md  lexer.cpp  main.cpp
prototype/: CMakeLists.txt  Makefile  README.md  main.cpp
singleton/: CMakeLists.txt  Makefile  README.md  main.cpp
singleton/dependency_injection/: CMakeLists.txt  Makefile  foo.cpp  headers.hpp  main.cpp
singleton/example/: CMakeLists.txt  Makefile  main.cpp
singleton/monostate/: CMakeLists.txt  monostate.cpp
singleton/multiton/: CMakeLists.txt  multiton.cpp
visitor/: CMakeLists.txt  README.md
visitor/acyclic_visitor/: CMakeLists.txt  README.md  main.cpp
visitor/classic_visitor/: CMakeLists.txt  README.md  main.cpp
visitor/intrusive_visitor/: CMakeLists.txt  README.md  main.cpp
visitor/multimethods/: CMakeLists.txt  main.cpp
visitor/reflective_visitor/: CMakeLists.txt  README.md  main.cpp
visitor/variant_and_std_visit/: CMakeLists.txt
